--- a/FizzBuzzKata.Test/FizzBuzzKata.Test.csproj
+++ b/FizzBuzzKata.Test/FizzBuzzKata.Test.csproj
@@ -43,11 +43,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FizzBuzzCalculatorShould.cs" />
+    <Compile Include="FizzBuzzShould.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\FizzBuzzKata\FizzBuzzKata.csproj">
+      <Project>{347e729a-acb0-4ee3-838f-29e421005c77}</Project>
+      <Name>FizzBuzzKata</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
